<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="@dimen/value_8dp"
    tools:context=".ui.fragments.HomeFragment">

    <TextView
        android:id="@+id/tv_home"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Pokédex App"
        android:paddingHorizontal="@dimen/value_8dp"
        android:textAppearance="?textAppearanceTitleLarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_content_mainmenu"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tv_home"
        app:layout_constraintBottom_toBottomOf="parent"
        android:numColumns="auto_fit"
        android:horizontalSpacing="10dp"
        android:verticalSpacing="10dp"
        >
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:rowCount="3"
            android:columnCount="2"
            android:padding="@dimen/value_8dp"
            >
            <Button
                android:id="@+id/btn_pokemon"
                android:text="@string/pokemons"
                android:layout_columnSpan="2"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:gravity="bottom"
                android:backgroundTint="?colorPrimary"
                android:textSize="@dimen/value_16sp"
                android:padding="@dimen/value_8dp"
                />
            <Button
                android:id="@+id/btn_items"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Items"
                android:layout_columnSpan="1"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:backgroundTint="?colorSecondary"
                android:layout_marginEnd="@dimen/value_4dp"
                android:padding="@dimen/value_8dp"
                android:gravity="bottom"
                android:textSize="@dimen/value_16sp"
                />
            <Button
                android:id="@+id/btn_moves"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/moves"
                android:layout_columnSpan="1"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:padding="@dimen/value_8dp"
                android:backgroundTint="?colorSecondaryVariant"
                android:gravity="bottom"
                android:layout_marginStart="@dimen/value_4dp"
                android:textSize="@dimen/value_16sp"
                />
            <Button
                android:id="@+id/btn_locations"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Types"
                android:layout_rowWeight="1"
                android:backgroundTint="?colorPrimaryVariant"
                android:layout_columnSpan="1"
                android:layout_columnWeight="1"
                android:padding="@dimen/value_8dp"
                android:gravity="bottom"
                android:textSize="@dimen/value_16sp"
                android:layout_marginEnd="@dimen/value_4dp"
                />
            <Button
                android:id="@+id/btn_abilities"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Favorites"
                android:layout_rowWeight="1"
                android:layout_columnSpan="1"
                android:layout_columnWeight="1"
                android:padding="@dimen/value_8dp"
                android:gravity="bottom"
                android:layout_marginStart="@dimen/value_4dp"
                android:textSize="@dimen/value_16sp"
                />
        </GridLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>