<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    tools:context=".ui.fragments.DetailsPokemonFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cl_content_header"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?colorSecondary"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_detail_pokemon_image"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:contentDescription="@string/pokemon_image"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />
            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/pb_details_progress"
                android:visibility="visible"
                android:indeterminate="true"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tv_detail_pokemon_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="Name"
                android:textAppearance="?textAppearanceTitleLarge"
                android:textColor="?colorOnPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
            android:id="@+id/content_description"
            android:padding="@dimen/value_8dp">
            <TextView
                android:id="@+id/label_detail_base_experience"
                android:layout_width="0dp"
                android:textAppearance="?textAppearanceTitleLarge"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="Base Experience"
                app:layout_constraintEnd_toStartOf="@+id/tv_detail_base_experience"
                />
            <TextView
                android:id="@+id/tv_detail_base_experience"
                android:layout_width="0dp"
                android:text="Loading..."
                android:gravity="right"
                android:textAppearance="?textAppearanceBody1"
                app:layout_constraintStart_toEndOf="@+id/label_detail_base_experience"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />
            <TextView
                android:id="@+id/label_detail_height"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/label_detail_base_experience"
                app:layout_constraintStart_toStartOf="parent"
                android:text="Height"
                android:textAppearance="?textAppearanceTitleLarge"
                app:layout_constraintEnd_toStartOf="@+id/tv_detail_base_experience"
                />
            <TextView
                android:id="@+id/tv_detail_height"
                android:layout_width="0dp"
                android:text="Loading..."
                android:gravity="right"
                android:textAppearance="?textAppearanceBody1"
                app:layout_constraintStart_toEndOf="@+id/label_detail_base_experience"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_detail_base_experience"
                />
        <TextView
            android:id="@+id/label_detail_weight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/label_detail_height"
            app:layout_constraintStart_toStartOf="parent"
            android:text="Weight"
            android:textAppearance="?textAppearanceTitleLarge"
            app:layout_constraintEnd_toStartOf="@+id/tv_detail_base_experience"
            />
        <TextView
            android:id="@+id/tv_detail_weight"
            android:layout_width="0dp"
            android:text="Loading..."
            android:gravity="right"
            android:textAppearance="?textAppearanceBody1"
            app:layout_constraintStart_toEndOf="@+id/label_detail_base_experience"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_height"
            />





        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_content_mainmenu"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/content_description"
            app:layout_constraintBottom_toBottomOf="parent"
            android:numColumns="auto_fit"
            android:horizontalSpacing="10dp"
            android:verticalSpacing="10dp"
            >
            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:rowCount="3"
                android:columnCount="2"
                android:padding="@dimen/value_8dp"
                >
                <Button
                    android:id="@+id/btn_pokemon"
                    android:text="@string/Abilities"
                    android:layout_columnSpan="2"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:gravity="bottom"
                    android:backgroundTint="?colorPrimary"
                    android:textSize="@dimen/value_16sp"
                    android:padding="@dimen/value_8dp"
                    />
                <Button
                    android:id="@+id/btn_items"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Items"
                    android:layout_columnSpan="1"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:backgroundTint="?colorSecondary"
                    android:layout_marginEnd="@dimen/value_4dp"
                    android:padding="@dimen/value_8dp"
                    android:gravity="bottom"
                    android:textSize="@dimen/value_16sp"
                    />
                <Button
                    android:id="@+id/btn_moves"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/moves"
                    android:layout_columnSpan="1"
                    android:layout_rowWeight="2"
                    android:layout_columnWeight="1"
                    android:layout_rowSpan="2"
                    android:padding="@dimen/value_8dp"
                    android:backgroundTint="?colorSecondaryVariant"
                    android:gravity="bottom"
                    android:layout_marginStart="@dimen/value_4dp"
                    android:textSize="@dimen/value_16sp"
                    />
                <Button
                    android:id="@+id/btn_locations"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Evolution"
                    android:layout_rowWeight="1"
                    android:backgroundTint="?colorPrimaryVariant"
                    android:layout_columnSpan="1"
                    android:layout_columnWeight="1"
                    android:padding="@dimen/value_8dp"
                    android:gravity="bottom"
                    android:textSize="@dimen/value_16sp"
                    android:layout_marginEnd="@dimen/value_4dp"
                    />

            </GridLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>